# cursor-setup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  rules.json
.github/workflows/: publish.yml
src/cursor_init/: __init__.py  main.py  templates.py
